--- a/build.gradle
+++ b/build.gradle
@@ -1,2 +1,10 @@
 apply plugin: 'idea'
 apply plugin: 'java'
+
+dependencies {
+    implementation 'commons-io:commons-io:2.11.0'
+}
+
+repositories {
+    mavenCentral()
+}
